# toggle_display_input

./: .gitignore  README.md  precommit.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package-uv.yml  python-package.yml
src/display/: __init__.py  display.py
tests/: __init__.py  display_test.py
toggle_display_input/: __init__.py  __main__.py  display.py  toggle_display_input.py
