[project]
name = "toggle-display-input"
version = "0.3"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "monitorcontrol>=3.1.0",
    "platformdirs>=4.3.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.4",
]

[project.scripts]
toggle-display-input = "toggle_display_input.display:Display.toggle_cmd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
