[project]
name = "toggle-display-input"
# version = "0.3.6"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "monitorcontrol>=3.1.0",
    "platformdirs>=4.3.6",
]

[project.urls]
repository = "https://github.com/kojiishi/toggle_display_input"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[project.scripts]
toggle-display-input = "display.display:Display.toggle_cmd"

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src/display"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests",]

[tool.setuptools_scm]
version_file = "src/display/_version.py"
